[package]
name = "ext4-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "test"
[dev-dependencies]
clap = { version = "4.4.18" , features = ["derive"]}

[lib]
name = "ext4"
path = "src/lib.rs"
[dependencies]
bitflags = { version = "2.4.2", default-features = false }
